--- a/nodethayduc/lad2/views/home.ejs
+++ b/nodethayduc/lad2/views/home.ejs
@@ -22,7 +22,7 @@
               <a class="nav-link active  text-warning" aria-current="page" href="/shop"> <button class="btn btn-outline-warning border-black   fs-5 ">Sản phẩm</button></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active   text-warning" aria-current="page" href=""> <button class="btn btn-outline-warning border-black fs-5  ">Thêm sản phẩm</button></a>
+                <a class="nav-link active   text-warning" aria-current="page" href="#"> <button class="btn btn-outline-warning border-black fs-5  ">Thêm sản phẩm</button></a>
             </li>
     
            
