--- a/DA-HTML_CSS/HTMLCSS/public/scss/Trangchu.scss
+++ b/DA-HTML_CSS/HTMLCSS/public/scss/Trangchu.scss
@@ -25,7 +25,7 @@ img {
     }
   }
   &-inner > * {
-    flex: 1;
+    // flex: 1;
   }
   &-items {
     display: none;
@@ -40,12 +40,22 @@ img {
   }
 }
 .button-mobile {
-  text-align: right;
   display: inline-block;
+  margin: 0 20px;
   @include m.breakpoint(md) {
     display: none;
   }
+  &-bar1,
+  &-bar2,
+  &-bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+  }
 }
+
 .main-menu {
   display: none;
   @include m.breakpoint(md) {
@@ -213,6 +223,7 @@ img {
   }
   &-action__link {
     text-decoration: none;
+    color: #b88e2f;
   }
 }
 .shop {
