--- a/DA-HTML_CSS/HTMLCSS/public/scss/cart.scss
+++ b/DA-HTML_CSS/HTMLCSS/public/scss/cart.scss
@@ -28,9 +28,7 @@ img {
     @include m.breakpoint(lg) {
     }
   }
-  &-inner > * {
-    flex: 1;
-  }
+
   &-items {
     display: none;
 
@@ -43,13 +41,7 @@ img {
     margin-left: 37px;
   }
 }
-.button-mobile {
-  text-align: right;
-  display: inline-block;
-  @include m.breakpoint(md) {
-    display: none;
-  }
-}
+
 .main-menu {
   display: none;
   @include m.breakpoint(md) {
@@ -93,31 +85,84 @@ img {
   margin: 70px 0 60px 0;
   &-info {
     display: grid;
-    grid-template-columns: 2fr 1fr;
-    gap: 30px;
+    grid-template-columns: 1fr;
+
+    @include m.breakpoint(lg) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
+    @include m.breakpoint(xl) {
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      gap: 30px;
+    }
   }
   &-table {
+    &_img {
+      margin: 0px;
+      padding: 0px;
+    }
+    &_image {
+      width: 50%;
+      @include m.breakpoint(md) {
+        width: 100%;
+      }
+    }
     &-title {
       background: #f9f1e7;
-      //   @include m.grid(6, 30px);
-      //   justify-content: center;
-      //   align-items: center;
-      text-align: center;
-      padding: 17px;
-      width: 786px;
+      padding: 17px 63px;
+      width: 400px;
+      @include m.breakpoint(sm) {
+        background: #f9f1e7;
+        padding: 17px 63px;
+        width: 560px;
+      }
+      @include m.breakpoint(md) {
+        background: #f9f1e7;
+        text-align: center;
+        padding: 17px 0px;
+        width: 700px;
+      }
+      @include m.breakpoint(lg) {
+        background: #f9f1e7;
+        text-align: center;
+        padding: 17px;
+        width: 786px;
+      }
     }
     &-title__name {
       padding: 42px;
       font-weight: 500;
+      @include m.breakpoint(lg) {
+        padding: 42px;
+        font-weight: 500;
+      }
     }
     &-title__price {
-      padding: 60px;
+      padding: 30px;
       font-weight: 500;
+      @include m.breakpoint(lg) {
+        padding: 60px;
+        font-weight: 500;
+      }
     }
     &-body {
-      @include m.grid(6, 0px);
-      justify-content: center;
+      display: grid;
+      grid-template-columns: repeat(6, 88px);
+      grid-gap: 23px;
+      justify-content: flex-start;
       align-items: center;
+
+      @include m.breakpoint(md) {
+        @include m.grid(6, 7px);
+        justify-content: center;
+        align-items: center;
+      }
+      @include m.breakpoint(lg) {
+        @include m.grid(6, 7px);
+        justify-content: center;
+        align-items: center;
+      }
     }
     &_itemA {
       color: #9f9f9f;
@@ -128,17 +173,31 @@ img {
       color: #9f9f9f;
     }
     &_itemC {
-      margin: 0 60px;
+      margin: 0 38px;
       padding: 6px 13px;
       border-radius: 4px;
       border: 1px rgb(92, 92, 92) solid;
       box-shadow: 7px 10px 28px rgba(0, 0, 0, 0.1);
+      @include m.breakpoint(md) {
+        margin: 0 38px;
+        padding: 6px 13px;
+        border-radius: 4px;
+        border: 1px rgb(92, 92, 92) solid;
+        box-shadow: 7px 10px 28px rgba(0, 0, 0, 0.1);
+      }
+      @include m.breakpoint(lg) {
+        margin: 0 60px;
+        padding: 6px 13px;
+        border-radius: 4px;
+        border: 1px rgb(92, 92, 92) solid;
+        box-shadow: 7px 10px 28px rgba(0, 0, 0, 0.1);
+      }
     }
     &_itemD {
       margin-left: 36px;
     }
     &_itemE {
-      margin-left: 78px;
+      margin-left: 30px;
     }
     &-body {
       margin: 56px 3px;
@@ -151,12 +210,26 @@ img {
     }
   }
   &-totals {
-    width: 393px;
     background: #f9f1e7;
     display: grid;
     justify-items: center;
     padding: 23px 0;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
+    @include m.breakpoint(lg) {
+      background: #f9f1e7;
+
+      display: grid;
+      justify-items: center;
+      padding: 23px 0;
+      margin-bottom: 25px;
+    }
+    @include m.breakpoint(xl) {
+      background: #f9f1e7;
+      display: grid;
+      justify-items: center;
+      padding: 23px 0;
+      margin-bottom: 25px;
+    }
 
     &-title {
       font-size: 32px;
