--- a/DA-HTML_CSS/HTMLCSS/public/scss/shop.scss
+++ b/DA-HTML_CSS/HTMLCSS/public/scss/shop.scss
@@ -28,9 +28,7 @@ img {
     @include m.breakpoint(lg) {
     }
   }
-  &-inner > * {
-    flex: 1;
-  }
+
   &-items {
     display: none;
 
@@ -44,10 +42,19 @@ img {
   }
 }
 .button-mobile {
-  text-align: right;
   display: inline-block;
+  margin: 0 20px;
   @include m.breakpoint(md) {
     display: none;
+  }
+  &-bar1,
+  &-bar2,
+  &-bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
   }
 }
 .main-menu {
@@ -91,17 +98,32 @@ img {
 //Content
 .content {
   background: #faf3ea;
-  height: 96px;
+  height: 120px;
   margin-bottom: 63px;
+  @include m.breakpoint(lg) {
+    background: #faf3ea;
+    height: 96px;
+    margin-bottom: 63px;
+  }
+
   &-list {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 8px;
+    padding-top: 5px;
+    text-align: center;
+    @include m.breakpoint(lg) {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 8px;
+    }
   }
   &-item {
     display: flex;
-    align-items: center;
+    justify-content: center;
+    margin: 3px 0;
+    @include m.breakpoint(lg) {
+      display: flex;
+      align-items: center;
+    }
   }
   &-item-filter {
     padding: 5px;
@@ -125,29 +147,52 @@ img {
     display: flex;
     align-items: center;
     &__label {
-      font-size: 20px;
-      margin-left: 29px;
+      @include m.breakpoint(lg) {
+        font-size: 20px;
+        margin-left: 29px;
+      }
     }
     &_inputnumber {
-      width: 34px;
-      height: 55px;
+      width: 24px;
+      height: 45px;
       text-align: center;
-      font-size: 20px;
+      font-size: 17px;
       border: none;
       color: #9f9f9f;
-      padding: 0 10px;
-      margin-left: 16px;
+      padding: 0 15px;
+      margin-right: 10px;
+      @include m.breakpoint(lg) {
+        width: 34px;
+        height: 55px;
+        text-align: center;
+        font-size: 20px;
+        border: none;
+        color: #9f9f9f;
+        padding: 0 10px;
+        margin-left: 16px;
+      }
     }
     &_inputtext {
-      width: 155px;
-      height: 55px;
+      width: 135px;
+      height: 35px;
       text-align: justify;
-      font-size: 20px;
+      font-size: 17px;
       border: none;
       padding: 0px 0 0 33px;
       color: #9f9f9f;
       margin-left: 17px;
       margin-right: 24px;
+      @include m.breakpoint(lg) {
+        width: 155px;
+        height: 55px;
+        text-align: justify;
+        font-size: 20px;
+        border: none;
+        padding: 0px 0 0 33px;
+        color: #9f9f9f;
+        margin-left: 17px;
+        margin-right: 24px;
+      }
     }
   }
 }
@@ -157,11 +202,14 @@ img {
 }
 .product {
   &-list {
-    @include m.grid(1, 30px);
     @include m.breakpoint(sm) {
       @include m.grid(2, 30px);
     }
-    @include m.breakpoint(md) {
+    @include m.grid(1, 30px);
+    @include m.breakpoint(lg) {
+      @include m.grid(3, 20px);
+    }
+    @include m.breakpoint(xl) {
       @include m.grid(4, 30px);
     }
   }
@@ -268,6 +316,10 @@ img {
     width: 200px;
     height: 30px;
   }
+  &-action__link {
+    text-decoration: none;
+    color: #b88e2f;
+  }
 }
 //Pagination
 .pagination {
@@ -288,27 +340,53 @@ img {
     display: block;
     background: #f9f1e7;
     color: #000;
-    padding: 20px;
-    margin: 20px;
+    padding: 15px;
+    margin: 15px;
     text-align: center;
     width: 20px;
-    font-size: 20px;
+    font-size: 17px;
     height: 20px;
     border-radius: 14px;
     text-decoration: none;
+    @include m.breakpoint(lg) {
+      display: block;
+      background: #f9f1e7;
+      color: #000;
+      padding: 20px;
+      margin: 20px;
+      text-align: center;
+      width: 20px;
+      font-size: 20px;
+      height: 20px;
+      border-radius: 14px;
+      text-decoration: none;
+    }
   }
   &-link_next {
     display: block;
     background: #f9f1e7;
-    padding: 20px;
+    padding: 15px;
     color: #000;
     margin: 20px;
-    font-size: 20px;
+    font-size: 17px;
     text-align: center;
     width: 50px;
     height: 20px;
     border-radius: 14px;
     text-decoration: none;
+    @include m.breakpoint(lg) {
+      display: block;
+      background: #f9f1e7;
+      padding: 20px;
+      color: #000;
+      margin: 20px;
+      font-size: 20px;
+      text-align: center;
+      width: 50px;
+      height: 20px;
+      border-radius: 14px;
+      text-decoration: none;
+    }
   }
 
   &-link_number:hover {
